--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
   },
-  "private": true
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Szcccc/bulletwar.git"
+  }
 }
