--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "babel-eslint": "^10.1.0",
-    "eslint-friendly-formatter": "^4.0.1"
+    "eslint-friendly-formatter": "^4.0.1",
+    "yarn": "^1.22.4"
   },
   "devDependencies": {
     "clean-webpack-plugin": "^3.0.0",
