--- a/package.json
+++ b/package.json
@@ -27,6 +27,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/Szcccc/bulletwar.git"
+    "url": "git@github.com:Y-or-N/bulletwar.git"
   }
 }
